added mysql connectivity, log4j logging support and junit-5 testing support

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,8 @@
 <title>Address Book - Index</title>
 </head>
 <body>
-	1. <a href="static/html/hello.html">Go to hello page</a> <br/>
+	1.
+	<a href="static/html/hello.html">Go to hello page</a>
+	<br />
 </body>
 </html>
